# inigo-hs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  hasura.patch  inigo-hs.cabal
.github/workflows/: build.yml
src-lib/: FFI.hs  Inigo.hs
